# pagedrop

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_verification_codes.py  0003_assets_comments.py  0004_oauth_identities.py  0005_project_organization.py
backend/app/: main.py
backend/app/api/v1/: assets.py  auth.py  comments.py  projects.py  public.py  router.py  share_links.py  tokens.py  workspaces.py
backend/app/core/: actor.py  config.py  database.py  deps.py  ratelimit.py  security.py  slug.py  types.py  urls.py
backend/app/models/: __init__.py  api_token.py  asset.py  audit_log.py  base.py  comment.py  oauth_identity.py  page_version.py  project.py  share_link.py  user.py  verification_code.py  workspace.py
backend/app/permissions/: service.py
backend/app/render/: service.py
backend/app/schemas/: asset.py  auth.py  comment.py  project.py  public.py  share_link.py  token.py  workspace.py
backend/app/services/: asset_service.py  audit_service.py  auth_service.py  comment_service.py  email_service.py  github_oauth_service.py  oauth_providers.py  project_service.py  secret_scan_service.py  share_link_service.py  storage.py  token_service.py  verification_service.py  workspace_service.py
backend/tests/: conftest.py  test_assets.py  test_auth.py  test_comments.py  test_github_auth.py  test_health.py  test_oauth_web.py  test_projects.py  test_share_links.py  test_tokens.py
docs/: api.md  cli.md  deploy.md  skill.md  (+2 more)
(+62 files in other folders)
